--- a/CSS/test.css
+++ b/CSS/test.css
@@ -4,6 +4,7 @@
 .clearfix {zoom: 1;}
 .clearfix:after {content: "."; clear: both;display: block;height: 0; visibility: hidden;}
 
+
 ::-webkit-scrollbar {background-color: #222;}
 ::-webkit-scrollbar-thumb {background-color: #333;border-radius: 1px;}
 ::-webkit-scrollbar-thumb:hover {background-color: #444;}
@@ -66,6 +67,16 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;  
+    overflow: hidden
+}
+section::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522,transparent);
+    z-index: 1000;
 }
 section img {
     position: absolute;
@@ -78,14 +89,15 @@ section img {
 }
 section img#moon {
     mix-blend-mode: screen;
-    z-index: 1;
+    z-index: 0;
 }
 #text {
     position: absolute;
     color: #fff;
     white-space: nowrap;
     font-size: 7.5vw;
-    z-index: 9;
+    z-index: 0;
+    right: -350px;
 }
 #mountains_front {
     z-index: 10;
